# ai-image-bypass-phase7

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  bypass_ai_detector.py  pyproject.toml  webui_bypass.py
.cursor/plans/: phase_10.3_gradient_edge_aware_perturbation_模块.plan.md  phase_10.4_transfer_based_blackbox_attack_模块.plan.md
.github/workflows/: ci.yml
cli_test/: README.md  TEST_SETTINGS.md  run.py  verify_detector.py
cli_test/images/: .gitkeep
cli_test/outputs/: .gitkeep  20260519-110735-camera.manifest.json  20260519-110735-diffusion_reconstruction.manifest.json  20260519-110735-encoding.manifest.json  20260519-110735-frequency.manifest.json  20260519-110735-frequency_peaks_cleansing.manifest.json  20260519-110735-gradient_edge_aware_perturbation.manifest.json  20260519-110735-lpips.manifest.json  20260519-110735-noise.manifest.json  20260519-110735-prnu_simulation.manifest.json  20260519-110735-regeneration.manifest.json  20260519-110735-regeneration_surrogate.manifest.json  20260519-110735-texture.manifest.json  20260519-110735-transfer_blackbox_attack.manifest.json  20260519-110735-watermark.manifest.json
docs/: CLOUD_WHITEBOX_ATTACK_RESULTS.md  GITHUB_REFERENCES.md  LARK_WIKI_SECTION4_TABLE.md  PRD-WebUI-Method-Family-Selection.md  USER_GUIDE.md
notebooks/: demo_experiment.ipynb
scripts/: run_experiment.sh
src/attack/: __init__.py  blackbox.py  foolbox_attack.py  hf_loader.py  pgd.py  verification.py  whitebox.py
src/benchmark/: __init__.py  cli.py  metrics.py  report.py  runner.py
src/bypass_cli/: __init__.py
src/detector_loop/: __init__.py  detector_interface.py  loop.py
src/external_validation/: __init__.py  hive_adapter.py  mock_adapter.py  platform_adapter.py  validation_runner.py
src/lpips_attack/: __init__.py  blackbox.py  config_extension.py  module.py  requirements-lpips.txt  smoke_test.py
src/synthid_removal/: __init__.py  spectral_codebook.py  v3_bypass.py
src/transform_core/: __init__.py  config.py  metadata.py  module.py  pipeline.py  registry.py  strength.py
tests/: conftest.py  test_cli_entry.py
tests/benchmark/: test_experiment.py  test_report.py  test_smoke.py
tests/detector_loop/: conftest.py  test_contract.py  test_real_closed_loop.py  test_real_loop.py  test_smoke.py
tests/external_validation/: test_hive_adapter.py  test_smoke.py
(+34 files in other folders)
